feat: implements about and repositories section and its requests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "vuetify"]
+    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "vuetify", "@types/markdown-it"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
