feat: update assets and lint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,13 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node", "vuetify", "@types/markdown-it"]
+    "types": [
+      "@nuxt/types",
+      "@nuxtjs/axios",
+      "@types/node",
+      "vuetify",
+      "@types/markdown-it"
+    ]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
