--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "predeploy": "nuxt generate",
-    "deploy": "gh-pages -d dist",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check .",
     "lint": "npm run lint:js && npm run lint:prettier",
@@ -38,6 +38,7 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.5.1",
     "gh-pages": "^6.0.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "push-dir": "^0.4.1"
   }
 }
