--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nuxt": "^2.15.8",
     "nuxt-typed-vuex": "^0.3.1",
     "vue": "^2.7.10",
+    "vue-kinesis": "^1.3.3",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
     "vuetify": "^2.6.10"
